--- a/ovs/index.html
+++ b/ovs/index.html
@@ -3,25 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OVS Project</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>OVS</title>
+    <meta name="description" content="Online Voting System" />
+    <meta name="author" content="OVS" />
 
-    <meta property="og:title" content="OVS Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="OVS" />
+    <meta property="og:description" content="Online Voting System" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/images/logo.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@ovs" />
+    <meta name="twitter:image" content="/images/logo.svg" />
     <link rel="icon" type="image/svg+xml" href="/images/logo.svg" />
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+    <!-- OVS System -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
